# facefusion-ncnn

./: CMakeLists.txt  README.md  main.cpp
model/: arcface.param  inswapper.param
src/: faceRecognize.cpp  faceRecognize.h  faceSwap.cpp  faceSwap.h  utils.cpp  utils.h  yoloface.cpp  yoloface.h
src/codeFormer/: codeformer.cpp  codeformer.h  encoder.cpp  encoder.h  generator.cpp  generator.h  model.h
test/: CMakeLists.txt  test_yolo.cpp
